--- a/PaySpace.Calculator.Web/Views/Calculator/History.cshtml
+++ b/PaySpace.Calculator.Web/Views/Calculator/History.cshtml
@@ -1,4 +1,5 @@
-@model CalculatorHistoryViewModel
+@using PaySpace.Calculator.Web.Services.Models
+@model PaySpace.Calculator.Web.Models.CalculatorHistoryViewModel
 
 @{
     ViewBag.Title = "Calculator History";
@@ -18,7 +19,7 @@
     </tr>
     </thead>
     <tbody>
-        @foreach (var history in Model.CalculatorHistory)
+        @foreach (CalculatorHistory? history in Model.CalculatorHistory)
         {
             <tr>
                 <th scope="row">@history.Timestamp</th>
