--- a/PaySpace.Calculator.Web/Views/_ViewImports.cshtml
+++ b/PaySpace.Calculator.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using PaySpace.Calculator.Web
-@using PaySpace.Calculator.Web.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
