--- a/PaySpace.Calculator.Web/Views/Calculator/Index.cshtml
+++ b/PaySpace.Calculator.Web/Views/Calculator/Index.cshtml
@@ -1,4 +1,4 @@
-@model PaySpace.Calculator.Web.Models.CalculatorViewModel
+@model PaySpace.Calculator.Web.ViewModels.CalculatorViewModel
 
 @{
     ViewBag.Title = "Tax Calculation";
