--- a/PaySpace.Calculator.Web/Views/Shared/Error.cshtml
+++ b/PaySpace.Calculator.Web/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaySpace.Calculator.Web.Models.ErrorViewModel
+﻿@model PaySpace.Calculator.Web.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
